--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,6 @@
 @layer base {
   body {
     font-family: Consolas, Monaco, monospace;
-    @apply bg-black min-h-screen;
+    @apply min-h-screen;
   }
 }
