--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,4 +9,14 @@
   .activate-menu {
     @apply text-indigo-400 font-bold;
   }
+
+  .hollow-base-btn {
+    @apply text-xs border border-gray-200 rounded-lg px-3 py-2 hover:shadow-xl;
+  }
+  .hollow-indigo-btn {
+    @apply hollow-base-btn text-gray-500 hover:text-indigo-400;
+  }
+  .hollow-error-btn {
+    @apply hollow-base-btn text-red-500;
+  }
 }
