:lipstick: 页面文字增加间距

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 #app {
-  @apply font-sans antialiased;
+  @apply font-sans antialiased tracking-wider;
 }
 @layer utilities {
   .activate-menu {
