--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@
   }
 
   .hollow-base-btn {
-    @apply text-xs border border-gray-200 rounded-lg px-3 py-2 hover:shadow-xl;
+    @apply text-xs border border-gray-200 rounded-lg px-3 py-2 hover:shadow-xl dark:border-slate-700;
   }
   .hollow-indigo-btn {
     @apply hollow-base-btn text-gray-500 hover:text-indigo-400;
